@@ -116,8 +116,8 @@ subtest 'BYTES' => sub {
     enc_ok \$bytes => $BYTES;
 
     my $u = undef;
-    enc_error_ok \$u => 'EncodeBytesUndef',
-      enc_error_ok bless( \$u, 'Bifcode::V2::BYTES' ) => 'EncodeBytesUndef',
+    enc_error_ok \$u => 'EncodeBytesUndef', 'scalar ref to undef';
+    enc_error_ok bless( \$u, 'Bifcode::V2::BYTES' ) => 'EncodeBytesUndef',
       'forcing undef as bytes';
 };
 
@@ -129,8 +129,8 @@ subtest 'LIST' => sub {
 
 subtest 'DICT' => sub {
     enc_ok {} => '{}';
-    enc_ok { 1 => 'one' } => '{i1:u3.one,}';
-    enc_ok { 1.5 => 'one' } => '{r1.5e0:u3.one,}';
+    enc_ok { 1 => 'one' } => '{u1.1:u3.one,}';
+    enc_ok { 1.5 => 'one' } => '{u3.1.5:u3.one,}';
     enc_ok { bytes => force_bifcode( $bytes, 'bytes' ) } => '{u5.bytes:'
       . $BYTES . '}';
 
